<resources>
    <string name="app_name">حـــيـــاه</string>
    <string name="company_name">WHITESIED DEV</string>
    <string name="login">تسجيل الدخول</string>
    <string name="privacy_policy">لقد قرأت  نص الخصوصية والأمان وأوافق عليه</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="next">التالي</string>
    <string name="confirm_login">تأكيد الكود</string>
    <string name="confirm">تأكيد</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_feed">اخر الاضافات</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">ألاقسام</string>
    <string name="title_add_medicine">اضافة دواء</string>
    <string name="title_chats">الدردشات</string>
    <string name="code_will_arrive">سيصلك كود التأكيد خلال %1$d ثانية</string>
    <string name="code_is_arriving">جاري إرسال كود التأكيد</string>
    <string name="error_toast">حدث خطأ ما</string>
    <string name="loading">جاري التحميل</string>
    <string name="dwaa_name">اسم الدواء</string>
    <string name="expire_date">تاريخ الانتهاء</string>
    <string name="price">السعر</string>
    <string name="location">الموقع</string>
    <string name="category">نوع الدواء</string>
    <string name="save">حفظ</string>
    <string name="add">اضافة</string>
    <string name="empty_expire_date_state">تاريخ الانتهاء مطلوب</string>
    <string name="empty_name_state">الاسم مطلوب</string>
    <string name="empty_price_state">اضف سعر</string>
    <string name="empty_type_state">نوع الدواء مطلوب</string>
    <string name="empty_empty_image_state">اضف صوره علي الاقل</string>
    <string name="type">النوع</string>
    <string name="heart">القلب</string>
    <string name="children">الاطفال</string>
    <string name="heart_medicines">ادوية القلب</string>
    <string name="children_medicines">ادوية الاطفال</string>
    <string name="diabetes_medicines">ادوية السكر</string>
    <string name="pressure_medicines">ادوية الضغط</string>
    <string name="stomach_medicines">ادوية المعدة</string>
    <string name="dermatological_medicines">ادوية جلدية</string>
    <string name="empty_name_error">اضف اسم الدواء</string>
    <string name="empty_exprie_date_error">اضف تاريخ انتهاء الدواء</string>
    <string name="empty_price_error">لابد من اضافة سعر</string>
    <string name="location_not_choosen">لم يتم اختيار الموقع</string>
    <string name="search_location">مكان البحث</string>
    <string name="search_location_hint">ابحث عن موقعك</string>
    <string name="location_not_accessed">لم يتم السماح للتطبيق بتحديد الموقع</string>
    <string name="your_location">موقعك</string>
    <string name="medicine_type">نوع الدواء</string>
    <string name="choose_expire_date">اختار تاريخ انتهاؤ الدواء</string>
    <string name="medicine_price">سعر الدواء</string>
    <string name="image_picker_canceled">تم الألغاء</string>
    <string name="empty_location_error">اضف موقع البيع</string>
    <string name="empty_image_error">اضف صورة للدواء</string>
    <string name="uploading_medicine">يتم اضافة عنصر جديد</string>
    <string name="select_medicine_image">اضف صورة الدواء</string>
    <string name="internet_problem_message">حدثت مشكلة في الاتصال</string>
    <string name="try_again">أعد المحاولة</string>
    <string name="back_connected">معاودة الاتصال</string>
    <string name="went_disconnected">تم قطع الاتصال</string>
    <string name="sort">ترتيب</string>
    <string name="filter">ترشيح</string>
    <string name="price_ascending">السعر: الاقل الي الاعلي</string>
    <string name="price_descending">السعر: الاعلي الي الاقل</string>
    <string name="choose_medicine_add_date">اختر تاريخ اضافة الدواء</string>
    <string name="amount">الكمية</string>
    <string name="unit">الوحدة</string>
    <string name="hayat_eg">HAYAT EG</string>
    <string name="username_placeholder">Email, Username, or Phone Number</string>
    <string name="username_example">eg. mohamed-ahmed, 01XX-XXX-XXXX</string>
    <string name="password_example">************</string>
    <string name="password_placeholder">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="not_have_account">Not have an account?</string>
    <string name="signup">Signup</string>
    <string name="empty_username">Email, Username, or Phone Number is required</string>
    <string name="error_invalid_username">Invalid Identity</string>
    <string name="error_empty_password">Password is required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="title_login">Login</string>
    <string name="forget_password_placeholder">Please enter your identity to send a confirmation code</string>
    <string name="proceed">Proceed</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
</resources>