<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/heart"
        android:title="@string/heart_medicines"
        app:showAsAction="never" />

    <item
        android:id="@+id/children"
        android:title="@string/children_medicines"
        app:showAsAction="never" />

    <item
        android:id="@+id/diabetes"
        android:title="@string/diabetes_medicines"
        app:showAsAction="never" />

    <item
        android:id="@+id/pressure"
        android:title="@string/pressure_medicines"
        app:showAsAction="never" />

    <item
        android:id="@+id/stomach"
        android:title="@string/stomach_medicines"
        app:showAsAction="never" />

    <item
        android:id="@+id/dermatological"
        android:title="@string/dermatological_medicines"
        app:showAsAction="never" />
</menu>