<?xml version="1.0" encoding="utf-8"?><!--TODO replace nested scroll view with scroll view-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.postingdonation.DonationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/arrow_back"
                    android:tint="@color/app_yellow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_add_medicine"
                    android:textColor="#8BFFFB"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <ImageView
            android:id="@+id/image"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:srcCompat="@drawable/add_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountTL"
            style="@style/Style.App.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:hint="@string/dwaa_name"
            app:startIconDrawable="@drawable/product_name_tag"
            app:startIconTint="@color/app_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeActionId="@integer/btm_to"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/Style.App.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:hint="@string/amount"
            app:startIconDrawable="@drawable/number_ic"
            app:startIconTint="@color/app_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeActionId="@integer/btm_to"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unit"
            style="@style/Style.Dwaa.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:textAlignment="viewEnd"
            android:text="@string/unit"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/package_ic"
            app:startIconTint="@color/app_yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location"
            style="@style/Style.Dwaa.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textAlignment="viewEnd"
            android:textColor="@color/app_grey"
            app:icon="@drawable/location_24"
            app:iconGravity="start"
            app:iconTint="@color/app_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/outlined_text_input_stroke_color"
            tools:layout_editor_absoluteY="230dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/expire_date"
            style="@style/Style.Dwaa.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:text="@string/expire_date"
            android:textAlignment="viewEnd"
            android:textColor="@color/app_grey"
            app:hintEnabled="true"
            app:icon="@drawable/expire_date"
            app:iconGravity="start"
            app:iconTint="@color/app_yellow"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName"
            app:strokeColor="@color/color_box_stroke_default" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/add"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

    </LinearLayout>

</ScrollView>
